[gd_scene load_steps=4 format=3 uid="uid://cwliuq1qo2mpa"]

[ext_resource type="Script" uid="uid://bqqx2goac5i4s" path="res://desk_itens/morse_input.gd" id="1_uptnt"]
[ext_resource type="FontFile" uid="uid://n1eu5vuo4qkw" path="res://assets/fonts/Jersey_15/Jersey15-Regular.ttf" id="3_3s55k"]
[ext_resource type="ArrayMesh" uid="uid://bgvmmlgc5jr3n" path="res://assets/models/high_monitor.res" id="3_43xqo"]

[node name="MorseInput" type="Node3D"]
script = ExtResource("1_uptnt")

[node name="DashTimer" type="Timer" parent="."]

[node name="WordTimer" type="Timer" parent="."]
one_shot = true

[node name="HighMonitor" type="MeshInstance3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -8.24425, 0, 0)
mesh = ExtResource("3_43xqo")

[node name="Text" type="Node3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 11.9552, 6.30089)

[node name="LabelWritting" type="Label3D" parent="Text"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = ".../---/..."
font = ExtResource("3_3s55k")
font_size = 128
uppercase = true

[node name="Meaning" type="Node3D" parent="Text"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="EchoStart" type="Label3D" parent="Text/Meaning"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.79079, 0, 0)
visible = false
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "st"
font = ExtResource("3_3s55k")
font_size = 256
horizontal_alignment = 2
uppercase = true

[node name="LabelMeaning" type="Label3D" parent="Text/Meaning"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "coast"
font = ExtResource("3_3s55k")
font_size = 256
uppercase = true

[node name="EchoEnd" type="Label3D" parent="Text/Meaning"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.80983, 0, 0)
visible = false
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "co"
font = ExtResource("3_3s55k")
font_size = 256
horizontal_alignment = 0
uppercase = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="WordTimer" to="." method="_on_word_timer_timeout"]
